kubernetes/bookinfo/nginx.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata: 
  name: nginx-ingress-controller
spec: 
  replicas: 1
#  revisionHistoryLimit: 3
  #selector:
  #  matchLabels:
  #    app: ingress-nginx-external
  template: 
    metadata:
      labels:
        k8s-app: nginx-ingress-lb
    #metadata:
    #  annotations:
    #    sidecar.istio.io/inject: "true"
    #  creationTimestamp: null
    #  labels:
    #    app: ingress-nginx-external
    #    purpose: ingress-nginx
    spec: 
      containers: 
        - args: 
           - /nginx-ingress-controller
           - "--default-backend-service=$(POD_NAMESPACE)/product-page"
          image: "gcr.io/google_containers/nginx-ingress-controller:0.9.0-beta.15"
          imagePullPolicy: Always
          name: nginx-ingress-controller
          ports: 
            - containerPort: 80
              name: http
              protocol: TCP
      serviceAccount: bookinfo-productpage
      serviceAccountName: bookinfo-productpage
      terminationGracePeriodSeconds: 60
